<resources>
    <string name="app_name">Android Learning</string>
    <string name="title_main_screen">Android Learning</string>
    <string name="toast_not_ready">Not Ready</string>
    <string name="open">Open</string>
    <string name="options">Options</string>
    <string name="exit">Exit</string>
    <string name="home_information">Information</string>
    <string name="home_examples">Examples</string>
    <string name="home_quiz">Quiz</string>
    <string name="options_change">Change</string>
    <string name="compose_shortcut_short_label1">Short label</string>
    <string name="compose_shortcut_long_label1">Long label</string>
    <string name="compose_disabled_message1">Disabled message</string>
    <string name="title_activity_home_navigation">HomeNavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="recycler_image_contentdesc">Check Image</string>
    <string name="drawertag">DRAWER_TAG</string>
    <string name="draweriteminformation">INFORMATION</string>
    <string name="draweritemexamples">EXAMPLES</string>
    <string name="nav_header_main">Android Studio</string>
    <string name="nav_header_sub">android.studio@android.com</string>
    <string name="nav_header_image_contendescription">Nav Header Image</string>
    <string name="nav_drawer_item1">Information</string>
    <string name="nav_drawer_item2">Examples</string>
    <string name="nav_drawer_item3">Quiz</string>
    <string name="nav_drawer_sub_menu">Communicate</string>
    <string name="nav_drawer_sub_item1">Share</string>
    <string name="gesture_status">Status</string>
    <string name="gesture_btn">Try</string>
    <string name="gesture_description">tap, double tap, fling, scroll, press, long press, click, etc.</string>
    <string name="singletapconfirmed">Single Tap</string>
    <string name="doubletap">Double Tap</string>
    <string name="doubletapevent">Double Tap Event</string>
    <string name="down">Down</string>
    <string name="showpress">Show Press</string>
    <string name="singletapup">Single Tap UP</string>
    <string name="scroll">Scroll</string>
    <string name="longpress">Long Press</string>
    <string name="fling">Fling</string>
    <string name="simpleclick">Simple Click</string>
    <string name="longClick">Long Click</string>
    <string name="intents_title_header">Intent</string>
    <string name="intent_toast_default">Hi </string>
    <string name="intent_toast_name">INTENTNAME</string>
    <string name="intent_uri">https://developer.android.com/guide/components/intents-filters.html</string>
    <string name="intent_title_explicit">Explicit Intent:</string>
    <string name="intent_btn_explicit">Go to home</string>
    <string name="intent_title_implicit">Implicit Intent:</string>
    <string name="intent_btn_implicit">Get info about intents online</string>
    <string name="intent_title_explicit_data">Explicit Intent with data:</string>
    <string name="intent_hint_explicit_data">Enter your name here</string>
    <string name="intent_btn_explicit_data">Send name to the toast</string>
    <string name="intent_title_implicit_data">Implicit Intent with data:</string>
    <string name="intent_hint_implicit_data">Enter your search here</string>
    <string name="intent_btn_implicit_data">Search online</string>
    <string name="recyclerview_list">List</string>
    <string name="recyclerview_grid">Grid</string>
    <string name="dialog_fragment_title_header">Dialog Fragments</string>
    <string name="dialog_title_alert">Alert Dialog:</string>
    <string name="dialog_btn_alert">Show Alert</string>
    <string name="dialog_title_custom">Custom Dialog:</string>
    <string name="dialog_btn_custom">Show custom dialog</string>
    <string name="dialog_title_list">List Dialog:</string>
    <string name="dialog_btn_list">Show list dialog</string>
    <string name="dialog_fragment_tag">DIALOG_FRAGMENT_TAG</string>
    <string name="dialog_custom_hint_username">Enter username</string>
    <string name="dialog_custom_hint_password">Enter password</string>
    <string name="dialog_type_tag">DIALOG_TYPE</string>
    <string name="dialog_type_alert">ALERT</string>
    <string name="dialog_type_custom">CUSTOM</string>
    <string name="dialog_type_list">LIST</string>
    <string name="list_fragment_name">Name</string>
    <string name="list_fragment_contact">Contact</string>
    <string name="collapsing_scrolling_title">Collapsing Toolbar</string>
    <string name="collapsing_uri">https://antonioleiva.com/collapsing-toolbar-layout/</string>
    <string name="collapsing_snackbar">Hold to get info about collapsing toolbar online</string>
    <string name="search_type">SEARCH_TYPE</string>
    <string name="search_simple">SEARCH_SIMPLE</string>
    <string name="search_enhanced">SEARCH_ENHANCED</string>
    <string name="webview_btn1">Open Google</string>
    <string name="webview_btn2">Open Youtube</string>
    <string name="webview_btn3">See the code</string>
    <string name="webview_btn4">Enter custom URL</string>
    <string name="webview_custom_url">Enter your custom URL</string>
    <string name="webview_btn_search">Go</string>
    <string name="textinput_title_header">TextInput</string>
    <string name="textinput_default">TextInputEditText</string>
    <string name="textinput_hint_default">Floating Hint Enabled Default</string>
    <string name="textinput_hint_animdisabled">Hint Animation Disabled</string>
    <string name="textinput_hint_custom">Custom Hint TextAppearance</string>
    <string name="textinput_counter_default">Character Counter Limit 5</string>
    <string name="textinput_counter_overflow">CounterOverflow CustomTextAppearance</string>
    <string name="textinput_error_default">Default Error Label</string>
    <string name="textinput_error_custom">Custom Error Label</string>
    <string name="textinput_password_default">Password Visibility Toggle</string>
    <string name="textinput_password_custom">Password Visibility Toggle Tint</string>
    <string name="title_activity_tab_layout_example">TabLayoutExample</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">A random text in section: %1$d</string>
    <string name="title_activity_bottom_nav_test">BottomNavTest</string>
    <string name="bottomnavigation_item1">Red</string>
    <string name="bottomnavigation_item2">Green</string>
    <string name="bottomnavigation_item3">Blue</string>
    <string name="viewpager_normal">Normal</string>
    <string name="viewpager_zoom">Zoom</string>
    <string name="viewpager_depth">Depth</string>
    <string name="widgets_title_header">Widgets</string>
    <string name="widget_btn_long_click">Button Long Clicked</string>
    <string name="widget_btn_click">Button Clicked</string>
    <string name="widget_togglebtn_on">Togglebutton On</string>
    <string name="widget_togglebtn_off">Togglebutton OFF</string>
    <string name="widget_checkbox_checked">Checkbox Checked</string>
    <string name="widget_checkbox_unchecked">Checkbox Unchecked</string>
    <string name="widget_radiobtn_1">First Radiobutton Selected</string>
    <string name="widget_radiobtn_2">Second Radiobutton Selected</string>
    <string name="widget_imagebtn_clicked">Imagebutton Clicked</string>
    <string name="widget_imagebtn_long_clicked">Imagebutton Long Clicked</string>
    <string name="widget_spinner_item1">Item 1 Selected</string>
    <string name="widget_spinner_item2">Item 2 Selected</string>
    <string name="widget_spinner_item3">Item 3 Selected</string>
    <string name="widget_switch_on">Switch ON</string>
    <string name="widget_switch_off">Switch OFF</string>
    <string name="widget_btn">Button</string>
    <string name="widget_checkbox">CheckBox</string>
    <string name="widget_radiobtn1">RadioButton1</string>
    <string name="widget_radiobtn2">RadioButton2</string>
    <string name="widget_imagebutton_contentdescription">ImageButton</string>
    <string name="widget_switch">Switch</string>
    <string name="form_first_name">First Name:</string>
    <string name="form_last_name">Last Name:</string>
    <string name="form_age">Age:</string>
    <string name="shared_pref_file_name">SharedPrefFileName</string>
    <string name="shared_pref_first_name">FirstName</string>
    <string name="shared_pref_last_name">LastName</string>
    <string name="shared_pref_age">Age</string>
    <string name="shared_pref_menu_edit">Edit</string>
    <string name="shared_pref_btn_save">Save</string>
    <string name="shared_pref_btn_cancel">Cancel</string>
    <string name="internal_storage_edittext_hint">Enter something in a file in <b>Internal</b> storage</string>
    <string name="internal_storage_write_btn">Write</string>
    <string name="internal_storage_append_btn">Append</string>
    <string name="internal_storage_read_btn">Read</string>
    <string name="internal_storage_file_name">InternalStorageFile.txt</string>
    <string name="internal_storage_toast_save">Saved</string>
    <string name="internal_file_name_title">File name:</string>
    <string name="internal_storage_new_file_imagebtn_contentdesc">new file internal storage</string>
    <string name="internal_storage_dialog_new_file_hint">Enter a file name</string>
    <string name="external_storage_edittext_hint">Enter something in a file in <b>External</b> storage</string>
    <string name="external_storage_file_path">ExternalStoragePath</string>
    <string name="external_storage_file_name">ExternalStorageFile.txt</string>
    <string name="sqlite_number_hint">Enter number</string>
    <string name="sqlite_item_hint">Enter item</string>
    <string name="sqlite_description_hint">Enter description</string>
    <string name="sqlite_btn_insert">Insert</string>
    <string name="sqlite_btn_delete">Delete</string>
    <string name="sqlite_btn_show">Show</string>
    <string name="room_menu_add_item">Add item</string>
    <string name="room_item_name">Title</string>
    <string name="room_item_details">Details</string>
    <string name="room_btn_save">Save</string>
    <string name="room_option_select">Select Options</string>
    <string name="room_option_delete">Delete</string>
    <string name="room_option_update">Update</string>
    <string name="room_extra">room_item</string>
    <string name="room_database_name">roomdatabasename.db</string>
    <string name="notification_title_header">Notifications</string>
    <string name="notification_text_simple">Simple notification:</string>
    <string name="notification_btn_simple">Pop a default notification</string>
    <string name="notification_text_action">Action notification:</string>
    <string name="notification_btn_action">Notification with actions</string>
    <string name="notification_text_push">Push Notification:</string>
    <string name="notification_btn_push">Open firebase for push notification</string>
    <string name="notification_channel_id">com.simform.rushabhmodi.androidlearning.exampleactivities</string>
    <string name="notification_text_key_repy">text_key_reply</string>
    <string name="notification_firebase_uri">https://console.firebase.google.com/project/android-learning-542e7/notification/compose</string>
    <string name="notification_text_progress">Progress Notification:</string>
    <string name="notification_btn_progress">Show Download</string>
    <string name="notification_reply_label">Reply</string>
    <string name="service_title_header">Service</string>
    <string name="service_btn_start">Start Audio</string>
    <string name="service_btn_stop">Stop Audio</string>
    <string name="service_started_text">Started Service:</string>
    <string name="service_bind_text">Bind Service:</string>
    <string name="service_btn_bind">Bind</string>
</resources>