<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_1"
            android:icon="@drawable/ic_menu_information"
            android:title="@string/nav_drawer_item1" />
        <item
            android:id="@+id/nav_item_2"
            android:icon="@drawable/ic_menu_examples"
            android:title="@string/nav_drawer_item2" />
        <item
            android:id="@+id/nav_item_3"
            android:icon="@drawable/ic_menu_quiz"
            android:title="@string/nav_drawer_item3" />
    </group>

    <item android:title="@string/nav_drawer_sub_menu">
        <menu>
            <item
                android:id="@+id/nav_sub_item_1"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_drawer_sub_item1" />
        </menu>
    </item>

</menu>
