<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.simform.rushabhmodi.androidlearning.examples.SqliteDatabaseExampleActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edittext_sqlite_write"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_90sdp"
            android:hint="@string/sqlite_edittext_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_sqlite_insert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_60sdp"
            android:text="@string/sqlite_btn_insert"
            android:onClick="onSqliteClick"
            app:layout_constraintBottom_toTopOf="@+id/btn_sqlite_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_sqlite_write" />

        <Button
            android:id="@+id/btn_sqlite_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSqliteClick"
            android:text="@string/sqlite_btn_delete"
            app:layout_constraintBottom_toTopOf="@+id/btn_sqlite_show"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_sqlite_insert" />

        <Button
            android:id="@+id/btn_sqlite_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSqliteClick"
            android:text="@string/sqlite_btn_show"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_sqlite_delete" />

        <TextView
            android:id="@+id/textview_sqlite_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_17sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_sqlite_show"
            tools:text="@tools:sample/lorem/random" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
